--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="91d69f">  <td>23/10/09 07:50:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Practicedemo.setup()[pri:0, instance:com.first.selenium.demo.Practicedemo@2f7298b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1962826816</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>23/10/09 07:50:43</td>   <td>17062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Practicedemo.test()[pri:0, instance:com.first.selenium.demo.Practicedemo@2f7298b]">test</td> 
-  <td>main@1962826816</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>24/05/22 11:16:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Numaricimagetypecaptcha.steup()[pri:0, instance:com.first.selenium.demo.Numaricimagetypecaptcha@72f926e6]">&gt;&gt;steup</td> 
+<td>&nbsp;</td>  <td>main@609962972</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>24/05/22 11:16:59</td>   <td>231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Numaricimagetypecaptcha.mathcaptcha()[pri:0, instance:com.first.selenium.demo.Numaricimagetypecaptcha@72f926e6]">mathcaptcha</td> 
+  <td>main@609962972</td>   <td></td> </tr>
 </table>
